deploy/k8s/gray/gray-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gray-app
spec:
  selector:
    app: gray-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
